--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
    
     <title>Doughnut</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <h1>Doughnut</h1>
-    <img src="img/doughnut.jpg" alt="Doughnut">
+    <h1 id="doughnut-page">Doughnut</h1>
+    <img class="doughnut" src="img/doughnut.jpg" alt="Doughnut">
 
-    <h3>Doughnut Recipe</h3>
+    <h3 class="title">Doughnut Recipe</h3>
 
     <p><strong><em>Simple Sugar Donut</em></strong> - this easy dough is made with flour, milk, yeast, and sugar, then the donuts are fried and dredged in sugar. A doughnut can be fried in oil or baked in an oven. A doughnut can be eaten with sugar, jam, a warm glass of milk or a chilled drink</p>
 
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="ingredients">Ingredients</h3>
+    
+    <ul class="unodered list">
         <li>Butter (100g)</li>
         <li>Flour (250g)</li>
         <li>Yeast (2 teaspoons)</li>
@@ -25,8 +28,8 @@
         <li>Oil( vegetable/groundnut)</li>
     </ul>    
 
-    <h3>Steps</h3>    
-    <ol>
+    <h3 class="steps">Steps</h3>    
+    <ol class="odered list">
         <li>Mix the flour, sugar and yeast in one bowl.</li>
         <li>Add milk, butter and egg to the mixture in the bowl. Mix properly until a dough is formed.</li>
         <li>Grease a new bowl and place the dough in it. Leave the dough for about one hour to rise.</li>
