--- a/recipes/marghi-special.html
+++ b/recipes/marghi-special.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     
     <title>Marghi Special</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Marghi Special</h1>
+    <h1 id="marghi">Marghi Special</h1>
 
     <img src="img/mspecial.jpeg" alt="Marghi Special">
 
-    <h3>The Marghi Special Recipe</h3>
+    <h3 class="m-title">The Marghi Special Recipe</h3>
 
     <p><strong>Marghi special</strong> is a Nigerian delicacy indigenous to the Marghi people of Adamawa state and other parts of the Northeastern region of Nigeria.</p>
 
-     <h3>Ingredients</h3>    
+     <h3 class="m-ingredients">Ingredients</h3>    
      
-     <ul>
+     <ul class="unordered list">
         <li>1 big Catfish (Cut into chunks)</li>
         <li>1 cup of white zobo leaves</li>
         <li>2 large Tomatoes</li>
@@ -28,8 +29,8 @@
         <li>Salt</li>
      </ul>
 
-     <h3>Steps</h3>
-     <ol>
+     <h3 class="m-steps">Steps</h3>
+     <ol class="ordered list">
         <li>Wash your catfish, season and set aside.</li>
         <li>Chop your tomatoes, peppers, green vegetables and onions and set aside.</li>
         <li>Soak the white zobo leaves in hot water for a while, if possible, soak overnight to remove sour taste. Add potash to better remove sour taste.</li>
