--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
    
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="recipes/style.css">
+    
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="home-page">Odin Recipes</h1>
+    
+       <button id="mlink"> <a href="recipes/marghi-special.html">Marghi Special</a></button>
 
-    <ul>
+       <p> <button id="dlink"> <a href="recipes/doughnut.html">Doughnut</a></button> </p>
 
-        <li> <a href="recipes/marghi-special.html">Marghi Special</a></li>
-
-        <li><a href="recipes/doughnut.html">Doughnut</a></li>
-
-    </ul>
 </body>
 </html>
