--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -17,7 +17,7 @@
 
     <h3 class="ingredients">Ingredients</h3>
     
-    <ul class="unodered list">
+    <ul class="unodered ulist">
         <li>Butter (100g)</li>
         <li>Flour (250g)</li>
         <li>Yeast (2 teaspoons)</li>
@@ -29,7 +29,7 @@
     </ul>    
 
     <h3 class="steps">Steps</h3>    
-    <ol class="odered list">
+    <ol class="odered olist">
         <li>Mix the flour, sugar and yeast in one bowl.</li>
         <li>Add milk, butter and egg to the mixture in the bowl. Mix properly until a dough is formed.</li>
         <li>Grease a new bowl and place the dough in it. Leave the dough for about one hour to rise.</li>
