--- a/recipes/marghi-special.html
+++ b/recipes/marghi-special.html
@@ -17,7 +17,7 @@
 
      <h3 class="m-ingredients">Ingredients</h3>    
      
-     <ul class="unordered list">
+     <ul class="unordered ulist">
         <li>1 big Catfish (Cut into chunks)</li>
         <li>1 cup of white zobo leaves</li>
         <li>2 large Tomatoes</li>
@@ -30,7 +30,7 @@
      </ul>
 
      <h3 class="m-steps">Steps</h3>
-     <ol class="ordered list">
+     <ol class="ordered olist">
         <li>Wash your catfish, season and set aside.</li>
         <li>Chop your tomatoes, peppers, green vegetables and onions and set aside.</li>
         <li>Soak the white zobo leaves in hot water for a while, if possible, soak overnight to remove sour taste. Add potash to better remove sour taste.</li>
