--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1 id="home-page">Odin Recipes</h1>
     
-       <button id="mlink"> <a href="recipes/marghi-special.html">Marghi Special</a></button>
+    <ul>
+         <li> <a href="recipes/marghi-special.html">Marghi Special</a></li>
 
-       <p> <button id="dlink"> <a href="recipes/doughnut.html">Doughnut</a></button> </p>
+        <li><a href="recipes/doughnut.html">Doughnut</a></li>
+    </ul>    
 
 </body>
 </html>
