--- a/recipes/marghi-special.html
+++ b/recipes/marghi-special.html
@@ -39,6 +39,7 @@
         <li>Add your zobo leaves to the pot and stir.</li>
         <li>Add oil and the chopped vegetables, allow to steam for about a minute or 2.</li>
      </ol>
+     <a href="../index.html">Return to main page</a>
 
 </body>
 </html>
