--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -38,5 +38,6 @@
         <li>Place the risen shaped dough into the heated oil. Fry the dough until its golden brown. Enjoy!</li>
 
     </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
