Added return to main page link

--- a/recipes/egg-sauce.html
+++ b/recipes/egg-sauce.html
@@ -12,8 +12,32 @@
     <h3 class="title"> Egg Sauce Recipe</h3>
 
     <p>
-        Egg Sauce is a popular Nigerian food made with eggs, tomatoes, peppers, onions and vegetable oil. The cooking time normally takes about 20 minutes. It contains lots of vitamin C, vitamin A and calcium. Also high in fat.
+        Egg Sauce is a popular Nigerian food made with eggs, tomatoes, peppers, onions and vegetable oil. The cooking time normally takes about 20 minutes. It contains lots of vitamin C, vitamin A and calcium. Also high in fat. This sauce is very popular in homes are mostly used with yam and plantain.
     </p>
+
+    <h3 class="ingredients">Ingredients</h3>
+
+    <ul class="list">
+        <li> 3 eggs</li>
+        <li>4 medium tomatoes</li>
+        <li>2 balls of pepper sliced</li>
+        <li>1 medium onion sliced</li>
+        <li>Salt & Dry pepper powder</li>
+        <li>1 stock cube</li>
+        <li>2 spoons of cooking vegetable oil</li>
+    </ul>
+    
+    <h3 class="Steps">Steps</h3>
+
+    <ol class="list">
+        <li>Heat your non-stick frying pan with 2 cooking spoons of oil (vegetable or olive oil) for about one minute.</li>
+        <li>Add the sliced tomatoes, onions and peppers and sauté for about 10-15 minutes.</li>
+        <li>Once the tomatoes and pepper are adequately fried, add salt to taste and the stock cube.</li>
+        <li>Beat the eggs in a separate plate with a pinch of salt.</li>
+        <li>Pour the beaten eggs on top of the frying tomato, onion and pepper. Allow a minute, and then sauté.</li>
+        <li>Break the eggs into crumbs as you fry. When the eggs have fried adequately, put off heat. Your egg sauce is ready!</li>
+    </ol>
+    <a href="../index.html">Return to main page</a>
 
 </body>
 </html>
