--- a/recipes/egg-sauce.html
+++ b/recipes/egg-sauce.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <title>Egg Sauce</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 id="egg-sauce">Egg Sauce</h1>
