--- a/recipes/egg-sauce.html
+++ b/recipes/egg-sauce.html
@@ -28,7 +28,7 @@
         <li>2 spoons of cooking vegetable oil</li>
     </ul>
     
-    <h3 class="Steps">Steps</h3>
+    <h3 class="steps">Steps</h3>
 
     <ol class="list">
         <li>Heat your non-stick frying pan with 2 cooking spoons of oil (vegetable or olive oil) for about one minute.</li>
